# algolabra-shakki

./: .coverage  .gitignore  README.md  pyproject.toml
dokumentaatio/: maarittelydokumentti.txt  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.txt  viikkoraportti2.txt  viikkoraportti3.txt
src/: attack_tables.py  bishop.py  chess_board.py  chess_board2.py  dump.py  globals.py  heuristic.py  king.py  knight.py  minmax.py  pawn.py  piece_set.py  precomputation.py  queen.py  rook.py  situation.py  smart_ai.py  stupid_ai.py  timing.py  utils.py
tests/: test_bishop.py  test_king.py  test_knight.py  test_minmax.py  test_pawn.py  test_precomputation.py  test_queen.py  test_rook.py  test_situation.py
